Remove Asciidoctor Build